app/src/main/java/com/delitx/furnituremaster/data_models/dtos_string_recognition/MultiLanguageFromStringDecoder.g4
grammar MultiLanguageFromStringDecoder;
finalExpr:'{' pair (','  pair)*  '}' #exprFinal;
pair: '[' (value) ']' ' '* ':' ' '* '['(value)']' #exprPair;
value:finalExpr#exprValueFinal
|word #exprValueWord;
word:.*?;
CHAR:.;
